# flashpilot

./: .gitattributes  .gitignore  AGENTS.md  FLASH_PILOT_CODEX_MASTER_PLAN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: flashpilot-qualification.yml  report-ui-pages.yml
demo/: README.md  contract_fixture.json  contract_fixture.metadata.json  failure_analysis_fixture.json
docs/: architecture.md  build-log.md  codex-contributions.md  decisions.md  demo-script.md  devpost-submission.md  release-checklist-v0.2.md  release-checklist.md  report-ui-readme-section.md  report-ui.md  research.md  submission-checklist.md  ui-build-log.md  ui-codex-contributions.md  ui-decisions.md
examples/ci/: organization-policy.yml  policy.yml  qualification-policy.yml
examples/github-actions/: flashpilot-qualification.yml
examples/lightning/: train.py
report-ui/: README.md  index.html
report-ui/src/: app.js
report-ui/src/components/: blocks.js  kit.js  trustladder.js
report-ui/src/data/: bundles.js
report-ui/src/design/: base.css  components.css  tokens.css
report-ui/src/lib/: bundle.js  dom.js  hash.js  router.js
report-ui/src/surfaces/: ci.js  compare.js  gallery.js  report.js  verifier.js
report-ui/tests/: hash.test.mjs
samples/hf-complete/: SOURCE.txt  attestation.junit.xml  environment.json  evidence-manifest.json  job-summary.md  junit.xml  organization-policy-evaluation.json  organization-policy.junit.xml  persistence-contract.json  recovery.attestation.json  recovery.attestation.signature.json  report.html  report.md  result.json  results.sarif
samples/hf-model-only/: SOURCE.txt  job-summary.md  junit.xml  organization-policy-evaluation.json  organization-policy.junit.xml  report.md  result.json
samples/lightning-complete/: SOURCE.txt  report.md  result.json
samples/lightning-weights-only/: SOURCE.txt  report.md  result.json
samples/native-repair/: SOURCE.txt  attestation.junit.xml  environment.json  evidence-manifest.json  job-summary.md  junit.xml  persistence-contract.json  recovery.attestation.json  report.html  report.md  result.json
samples/unknown-layout/: SOURCE.txt  audit.json  job-summary.md  junit.xml  report.md
schemas/: attestation-registry-completion-v1.schema.json  attestation-registry-entry-v1.schema.json  attestation-registry-head-v1.schema.json  attestation-registry-history-v1.schema.json  attestation-registry-v1.schema.json  attestation-signature-v1.schema.json  ci-policy-v1.schema.json  conversion-artifact-v1.schema.json  conversion-case-v1.schema.json  conversion-qualification-v1.schema.json  deepspeed-checkpoint-event-v1.schema.json  deepspeed-checkpoint-manifest-v1.schema.json  deepspeed-qualification-v1.schema.json  deepspeed-rank-state-v1.schema.json  distributed-checkpoint-event-v1.schema.json  distributed-checkpoint-manifest-v1.schema.json  distributed-qualification-v1.schema.json  distributed-rank-state-v1.schema.json  evidence-manifest-v1.schema.json  fallback-checkpoint-set-v1.schema.json  fault-timing-trial-v1.schema.json  flashpilot-sarif-v1.schema.json  fuzz-case-v1.schema.json  fuzz-checkpoint-artifact-v1.schema.json  hf-preemption-certification-v1.schema.json  hf-preemption-commit-v1.schema.json  hf-preemption-ready-v1.schema.json  multi-rank-failure-event-v1.schema.json  multi-rank-fault-ready-v1.schema.json  multi-rank-peer-failure-v1.schema.json  organization-policy-evaluation-v1.schema.json  organization-qualification-policy-v1.schema.json  partial-write-fuzz-v1.schema.json  persistence-contract-v1.schema.json  persistence-item-v1.schema.json  previous-valid-fallback-v1.schema.json  qualification-policy-evaluation-v1.schema.json  qualification-policy-v1.schema.json  qualification-profile-v1.schema.json  randomized-fault-timing-v1.schema.json  (+2 more)
src/flashpilot/: __init__.py  cli.py  diagnostics.py  pytest_plugin.py
tests/: __init__.py  conftest.py
tests/fixtures/: README.md
tests/integration/: test_adapter_checkpoints.py  test_control_run.py  test_conversion_qualification.py  test_crash_recovery.py  test_deepspeed_qualification.py  test_distributed_qualification.py  test_hf_qualification.py  test_lightning_qualification.py  test_partial_write_fuzz_qualification.py  test_preemption_certification.py  test_previous_valid_fallback.py  test_randomized_fault_timing.py  test_repair_loop.py  test_safe_full.py
tests/unit/: test_adapters.py  test_agent_guardrails.py  test_agent_providers.py  test_atomic_checkpoint.py  test_attestation_registry.py  test_checkpoint_fuzzing.py  test_ci.py  test_conversion.py  test_data.py  test_deepspeed.py  test_distributed.py  test_doctor.py  test_failure_artifact.py  test_fallback_qualification.py  test_fault_timing.py  test_hf_adapter.py  test_lightning_adapter.py  test_live_cli.py  test_loader.py  test_manifests.py  test_model.py  test_multirank.py  test_organization_policy.py  test_packaging.py  test_paths.py  test_persistence_contracts.py  test_preemption.py  test_profiles.py  test_pytest_plugin.py  test_qualification_policy.py  test_repair_executor.py  test_retention.py  test_sarif.py  test_static_audit.py  test_storage_telemetry.py
tools/: build_samples.py  verify_samples.py
(+220 files in other folders)
