[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flashpilot"
version = "0.1.0"
description = "AI checkpoint reliability and storage autopilot"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3",
    "openai>=2,<3",
    "pydantic>=2.7,<3",
    "rich>=13.7,<15",
    "torch>=2.3,<3",
    "typer>=0.12,<1",
]

[project.scripts]
flashpilot = "flashpilot.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5,<8",
    "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --basetemp=.pytest-local/temp"
cache_dir = ".pytest-local/cache"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
