[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flashpilot"
version = "0.2.0"
description = "Checkpoint recovery qualification and verification harness"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["checkpoint", "machine-learning", "pytorch", "recovery", "reliability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "numpy>=1.26,<3",
    "openai>=2,<3",
    "pydantic>=2.7,<3",
    "pyyaml>=6,<7",
    "rich>=13.7,<15",
    "torch>=2.3,<3",
    "typer>=0.12,<1",
]

[project.scripts]
flashpilot = "flashpilot.cli:app"

[project.optional-dependencies]
dev = [
    "build>=1.5,<2",
    "deepspeed>=0.19,<0.20; platform_system != 'Windows'",
    "lightning>=2.6,<3",
    "pytest>=8.2,<9",
    "pytest-cov>=5,<8",
    "ruff>=0.6,<1",
    "twine>=6.2,<7",
]
hf = [
  "accelerate>=1.14,<2",
  "safetensors>=0.8,<1",
  "transformers>=5.14,<6",
]
lightning = [
  "lightning>=2.6,<3",
]
deepspeed = [
  "deepspeed>=0.19,<0.20; platform_system != 'Windows'",
]

[project.urls]
Documentation = "https://github.com/cimpal55/flashpilot#readme"
Issues = "https://github.com/cimpal55/flashpilot/issues"
Repository = "https://github.com/cimpal55/flashpilot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/flashpilot/fixtures" = [
    "demo/contract_fixture.json",
    "demo/contract_fixture.metadata.json",
    "demo/failure_analysis_fixture.json",
    "demo/failure_analysis_fixture.metadata.json",
]
"share/flashpilot/schemas" = [
    "schemas/ci-policy-v1.schema.json",
    "schemas/conversion-artifact-v1.schema.json",
    "schemas/conversion-case-v1.schema.json",
    "schemas/conversion-qualification-v1.schema.json",
    "schemas/distributed-checkpoint-event-v1.schema.json",
    "schemas/distributed-checkpoint-manifest-v1.schema.json",
    "schemas/distributed-qualification-v1.schema.json",
    "schemas/distributed-rank-state-v1.schema.json",
    "schemas/deepspeed-checkpoint-event-v1.schema.json",
    "schemas/deepspeed-checkpoint-manifest-v1.schema.json",
    "schemas/deepspeed-qualification-v1.schema.json",
    "schemas/deepspeed-rank-state-v1.schema.json",
    "schemas/evidence-manifest-v1.schema.json",
    "schemas/fallback-checkpoint-set-v1.schema.json",
    "schemas/fuzz-case-v1.schema.json",
    "schemas/fuzz-checkpoint-artifact-v1.schema.json",
    "schemas/fault-timing-trial-v1.schema.json",
    "schemas/flashpilot-sarif-v1.schema.json",
    "schemas/hf-preemption-certification-v1.schema.json",
    "schemas/hf-preemption-commit-v1.schema.json",
    "schemas/hf-preemption-ready-v1.schema.json",
    "schemas/multi-rank-failure-event-v1.schema.json",
    "schemas/multi-rank-fault-ready-v1.schema.json",
    "schemas/multi-rank-peer-failure-v1.schema.json",
    "schemas/partial-write-fuzz-v1.schema.json",
    "schemas/previous-valid-fallback-v1.schema.json",
    "schemas/persistence-contract-v1.schema.json",
    "schemas/persistence-item-v1.schema.json",
    "schemas/qualification-profile-v1.schema.json",
    "schemas/randomized-fault-timing-v1.schema.json",
    "schemas/recovery-attestation-v1.schema.json",
]
"share/flashpilot/examples/ci" = ["examples/ci/policy.yml"]
"share/flashpilot/examples/github-actions" = [
    "examples/github-actions/flashpilot-qualification.yml",
]
"share/flashpilot/examples/hf_trainer" = ["examples/hf_trainer/train.py"]
"share/flashpilot/docs" = ["docs/release-checklist-v0.2.md"]

[tool.pytest.ini_options]
addopts = "-ra -p no:cacheprovider -p flashpilot.pytest_plugin"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
